...
@Composable
fun AssistantMessage(
    text: String,
    reasoningText: String?,
) {
    val reasoningText = reasoningText?.trim()
    Row(modifier = Modifier.padding(all = 8.dp).fillMaxWidth(1.0f).testTag("AssistantMessageView"), horizontalArrangement = Arrangement.Absolute.Left) {
        Image(
            painter = painterResource(R.drawable.smart_toy_outline),
            contentDescription = "Assistant icon",
            modifier =
                Modifier.size(36.dp)
                    .border(1.5.dp, MaterialTheme.colorScheme.secondary),
...
                Spacer(modifier = Modifier.height(4.dp))
                Text(text = reasoningText, style = MaterialTheme.typography.bodySmall, color = MaterialTheme.colorScheme.secondary)
            }
            Spacer(modifier = Modifier.height(4.dp))
            MarkdownText(
                markdown = text,
                modifier = Modifier.testTag("AssistantMessageViewText"),
            )
        }
    }
}

@Preview
...
