...
                    )
                }
            },
            bottomBar = {
                Box {
                    if (modelRunnerInstance == null) {
                        ModelLoadingIndicator(modelRunnerInstance) { onError, onStatusChange ->
                            loadModel(onError, onStatusChange)
                        }
                    } else {
                        Column {
                            TextField(
                                value = userInputFieldText,
                                onValueChange = { userInputFieldText = it },
                                modifier = Modifier
                                    .padding(4.dp)
                                    .fillMaxWidth(1.0f).testTag("InputBox"),
                                enabled = !isInGeneration.value
                            )
                            Row(
                                horizontalArrangement = Arrangement.SpaceBetween,
                                modifier = Modifier
                                    .fillMaxWidth(1.0f)
...
